examples/BAD/BAD_049_CONSISTENCY_4/main.nut
Data Recursive :=
    - string: path
    - bool: true
    - Recursive: absurd

{}
